2006-04-27  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaPixmapShouldBeInFB), (exaDoMigration):
	Correct some bugs causing performance issues in the "Smart" scheme.

2006-04-27  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaCopyNtoN), (exaSolidBoxClipped),
	(exaImageGlyphBlt), (exaFillRegionSolid), (exaFillRegionTiled):
	* exa/exa_priv.h:
	* exa/exa_render.c: (exaCompositeFallbackPictDesc):
	* exa/exa_unaccel.c: (exaDrawableLocation), (ExaCheckFillSpans),
	(ExaCheckSetSpans), (ExaCheckPutImage), (ExaCheckCopyArea),
	(ExaCheckCopyPlane), (ExaCheckPolyPoint), (ExaCheckPolylines),
	(ExaCheckPolySegment), (ExaCheckPolyArc), (ExaCheckPolyFillRect),
	(ExaCheckImageGlyphBlt), (ExaCheckPolyGlyphBlt),
	(ExaCheckPushPixels), (ExaCheckGetImage), (ExaCheckGetSpans),
	(ExaCheckSaveAreas), (ExaCheckRestoreAreas), (ExaCheckPaintWindow),
	(ExaCheckComposite):
	Improve EXA fallback debugging output to include the locations of
	pixmaps.  This is being used in tracking down recent compositing
	performance regressions.

2006-04-27  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaPolySegment):
	* exa/exa_unaccel.c: (ExaCheckPolylines), (ExaCheckPolySegment):
	Add trivial PolySegment acceleration for 0-width horizontal/vertical
	lines, which still happen somewhat frequently and were cluttering up my
	fallback debugging output.  x11perf says it's a major performance win
	in those cases (though probably irrelevant), and it passes Xlib9.

2006-04-26  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphs):
	In drawing glyphs, shortcut our way to exaComposite instead of going
	through the whole CompositePicture stack and doing things like computing
	damage over again.  This is a sizeable win for text drawing with a
	compmgr.  Also avoid calling down into the server for dealing with the
	scratch pixmap when we are able to do UploadToScreen successfully and
	never need it.

2006-04-26  Eric Anholt  <anholt@FreeBSD.org>
